package quiz.queue.labact3;

public interface QuestionnaireInteface {
    String question();
    String[] multipleChoiceLabel();
    int correctAnswer();
}
