@startuml

title __LABACT3's Class Diagram__\n

  namespace  {
    namespace uiz.queue.labact3 {
      class quiz.queue.labact3.AdminViewController {
      }
    }
  }
  

  namespace  {
    namespace uiz.queue.labact3 {
      class quiz.queue.labact3.MainApp {
      }
    }
  }
  

  namespace  {
    namespace uiz.queue.labact3 {
      class quiz.queue.labact3.MainViewController {
      }
    }
  }
  

  namespace  {
    namespace uiz.queue.labact3 {
      class quiz.queue.labact3.MyQueue {
      }
    }
  }
  

  namespace  {
    namespace uiz.queue.labact3 {
      interface quiz.queue.labact3.QuestionnaireInteface {
      }
    }
  }
  

  namespace  {
    namespace uiz.queue.labact3 {
      class quiz.queue.labact3.Questions {
      }
    }
  }
  

  namespace  {
    namespace uiz.queue.labact3 {
      interface quiz.queue.labact3.QueueInterface {
      }
    }
  }
  

  namespace  {
    namespace uiz.queue.labact3 {
      class quiz.queue.labact3.UserViewController {
      }
    }
  }
  

  quiz.queue.labact3.AdminViewController -up-|> quiz.queue.labact3.MainViewController
  quiz.queue.labact3.MainApp -up-|> javafx.application.Application
  quiz.queue.labact3.MainViewController .up.|> javafx.fxml.Initializable
  quiz.queue.labact3.MyQueue .up.|> quiz.queue.labact3.QueueInterface
  quiz.queue.labact3.Questions .up.|> quiz.queue.labact3.QuestionnaireInteface
  quiz.queue.labact3.UserViewController -up-|> quiz.queue.labact3.AdminViewController
  quiz.queue.labact3.UserViewController o-- quiz.queue.labact3.Questions : initQ


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
